<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.02"
        android:gravity="center"
        android:text="@string/op_sweb"
        android:textColor="#F8F8FF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/input_dni"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/name_dni"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#F8F8FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageButton1"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Introduce número DNI"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="19dp"
            android:layout_toRightOf="@+id/textView1"
            android:onClick="@string/conectar"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton2"
            android:layout_toRightOf="@+id/imageButton2"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton1"
            android:layout_toRightOf="@+id/imageButton1"
            android:onClick="@string/insertarRegistro"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageButton3"
            android:layout_toRightOf="@+id/imageButton3"
            android:src="@android:drawable/ic_menu_delete" />
    </RelativeLayout>

</LinearLayout>